# training-ai-introduce-crew-ai

./: .gitignore  README.md  detailed_prd_document.md  detailed_technical_doc.md  market_strategy.md  prd_document.md  pyproject.toml
api/: main.py
files/uploads/: 522e6306-9880-420d-b30d-4d58a2b9ca3e.xlsx
output/: 01_detailed_edge_cases.md  01_detailed_prd.md  01_detailed_technical_design.md  01_detailed_user_stories.md  01_developer_analysis.md  01_developer_technical_spec.md  01_developer_ux_design.md  business_analysis_1_clarified_requirement.md  business_analysis_2_prd_document.md  developer_1_system_architecture.md  developer_2_api_specifications.md  developer_3_frontend_specifications.md  developer_analysis.md  developer_technical_spec.md  developer_ux_design.md  post.md  summary.md
scratch/: generate_sample_data.py
src/testflow/: main.py
src/testflow/crews/business_analysis_crew/: business_analysis_crew.py
src/testflow/crews/business_analysis_crew/config/: agents.yaml  tasks.yaml
src/testflow/crews/content_crew/: content_crew.py
src/testflow/crews/content_crew/config/: agents.yaml  tasks.yaml
src/testflow/crews/crewanomali/: crewanomali.py
src/testflow/crews/developer_crew/: developer_crew.py
src/testflow/crews/file_analyzer/: file_analyzer.py
src/testflow/crews/marketanalisator/: marketanalisator.py
src/testflow/crews/prophet_crew/: prophet_crew.py
src/testflow/crews/spec_detailer_crew/: spec_detailer_crew.py
src/testflow/tools/: excel_tool.py  tool_anomali.py  tool_prophet.py
tasks/: celery_app.py  celery_task.py
(+12 files in other folders)
