[project]
name = "testflow"
version = "0.1.0"
description = "testflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "celery>=5.6.3",
    "crewai[tools]==1.14.4",
    "fastapi>=0.136.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "prophet>=1.3.0",
    "redis>=7.4.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.46.0",
]

[project.scripts]
kickoff = "testflow.main:kickoff"
run_crew = "testflow.main:kickoff"
plot = "testflow.main:plot"
run_with_trigger = "testflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
